src/components/footer/footer.scss
.footer {
    width: 100vw;
    background-color: #1E1E1E;
    margin-top: -9.2%;

    & > .footer-grid {
        position: relative;
        width: 100%;
        
        @media (min-width: 768px) {
            display: flex;
            justify-content: space-between;
            max-width: 1200px;
            padding: 10em 0 5em 0;
            margin: 0 auto;
        }
        @media (max-width: 767px) {
            display: block;
            padding: 7em 0 0 0;
        }

        & > .footer-contact-info {
            display: flex;
            
            @media (min-width: 768px) {
                justify-content: space-between;
                width: 62.5%;
            }
            @media (max-width: 767px) {
                flex-direction: column-reverse;

            }
            
            & > .footer-address-block-wrapper {
                text-align: left;

                @media (max-width: 767px) {
                    margin-top: 41px;
                    text-align: center;
                    width: 100%;
                }
                @media (min-width: 768px) {
                    width: 148px;
                }

                & > .footer-address-block {
                    margin-bottom: 1em;
                    @media (max-width: 767px) {
                        margin-bottom: 20px;
                    }

                    & > a {
                        color: #ffffff;
                        opacity: 0.7;
                        font-size: 0.8125rem;
                        line-height: 19px;
                        text-decoration: none;

                        &:hover {
                            color: #3cd52e;
                        }
                        
                        & > address {
                            font-style: normal;
                            opacity: 0.7;
                        }
                    }
                }
                & > h4.footer-heading {
                    color: #ffffff;
                    font-size: 0.8125rem;
                    font-weight: bold;
                    line-height: 19px;
                    opacity: 1;
                    margin: 0;
                    @media (max-width: 767px) {
                        letter-spacing: 2.89px;
                        line-height: 24px;
                    }
                }   
            }
            
            & > .footer-email-form-wrapper {
                position: relative;
                text-align: left;
                
                @media (max-width: 767px) {
                    margin: 0 auto;
                    width: 73.33%;
                }

                & > .footer-form-heading {
                    color: #FFFFFF;
                    font-size: 0.8125rem;
                    font-weight: normal;
                    letter-spacing: 3.25px;
                    line-height: 24px;
                    margin-bottom: 15px;

                    @media (max-width: 767px) {
                        font-size: 0.8125rem;
                        font-weight: normal;
                        letter-spacing: 3.25px;
                        line-height: 24px;
                        text-align: center;
                        margin-bottom: 16px;
                    }
                }
                & > .footer-form input {
                    outline: none;
                }
                & > .social-icons-wrapper {
                    position: relative;
                }
            }
        }
    }
}

